// HakjDB gRPC API
// API version: 1.2.0
//
// This package contains Protobuf definitions related to key-value storage.

syntax = "proto3";
package api.v1.kvpb;

message SetStringRequest {
  // The key to use.
  string key = 1;
  // The value to store.
  bytes value = 2;
}

message SetStringResponse {}

message GetStringRequest {
  // The key to use.
  string key = 1;
}

message GetStringResponse {
  // The returned value.
  bytes value = 1;
  // True if the key exists. False if it doesn't exist.
  bool ok = 2;
}

// StringKVService provides RPCs related to String keys.
service StringKVService {
  // SetString sets a key to hold a String value. Creates the key if it doesn't exist.
  // Overwrites the key if it is holding a value of another data type.
  // Uses the database sent in gRPC metadata or the default database if omitted.
  rpc SetString(SetStringRequest) returns (SetStringResponse) {}

  // GetString returns the value a String key is holding.
  // Uses the database sent in gRPC metadata or the default database if omitted.
  rpc GetString(GetStringRequest) returns (GetStringResponse) {}
}